--- a/css/contactme.css
+++ b/css/contactme.css
@@ -27,7 +27,7 @@
 			}
 
 			body {
-			  max-width: 1920px;
+			  max-width: 3920px;
 			  min-height: 100vh;
 			  overscroll-behavior: none;
 			  place-items: center;
